Add Responsive Styling

--- a/css/style.css
+++ b/css/style.css
@@ -342,3 +342,9 @@ div.slideRight {
             transform: translateX(0);
   }
 }
+
+@media (max-width: 450px) {
+  .form {
+    width: 320px;
+  }
+}
